--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "barryvdh/laravel-dompdf": "^2.0",
         "bezhansalleh/filament-language-switch": "^2.0",
         "filament/filament": "^3.0-stable",
         "guzzlehttp/guzzle": "^7.2",
